--- a/SIGOFCv3/Areas/Supervision/Views/ManInformeFauna/AddEditFauna.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInformeFauna/AddEditFauna.cshtml
@@ -62,7 +62,7 @@
                             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#navSupervision" role="tab" aria-controls="home" aria-selected="true">Sobre la Supervisión</a></li>
                             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#navPlanManejo" role="tab" aria-controls="home" aria-selected="true">Plan de Manejo</a></li>
                             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#navObligTitular" role="tab" aria-controls="home" aria-selected="true">Obligaciones</a></li>
-                            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#navEnfermedad" role="tab" aria-controls="home" aria-selected="true">Enfermedades</a></li>
+                            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#navZoonosis" role="tab" aria-controls="home" aria-selected="true">Zoonosis</a></li>
                             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#navConclusion" role="tab" aria-controls="home" aria-selected="true">Conclusiones</a></li>
                             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#navIncidencias" role="tab" aria-controls="home" aria-selected="true">Incidencias</a></li>
                             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#navInformeDigital" role="tab" aria-controls="home" aria-selected="true">Informe digital</a></li>
@@ -575,7 +575,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane fade show" id="navEnfermedad" role="tabpanel" aria-labelledby="nav-home-tab">
+                            <div class="tab-pane fade show" id="navZoonosis" role="tabpanel" aria-labelledby="nav-home-tab">
                                 @Html.Partial("~/Areas/Supervision/Views/ManInforme/Render/_renderEnfermedades.cshtml", Model.tbEnfermedad
                                                         , new ViewDataDictionary { { "TITULO", "" } })                                
                             </div>
