--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/Render/_renderEnfermedades.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/Render/_renderEnfermedades.cshtml
@@ -137,7 +137,7 @@
         </div>
     </div>
     <div class="card">
-        <div class="card-header text-small">Accidentes por ataques o manipulación de animales sivestres</div>
+        <div class="card-header text-small">Accidentes por ataques o manipulación de animales silvestres</div>
         <div class="card-body">
             <div class="form-row">
                 <div class="table-responsive">
