--- a/SIGOFCv3/Areas/THabilitante/Views/ManPOA/_DetRegente.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManPOA/_DetRegente.cshtml
@@ -24,12 +24,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-group row" style="margin-bottom:0px;">
-                    <label for="lblNombre" class="col-md-4 col-form-label text-small">Fecha de Resolución</label>
-                    <div class="col-md-4">
-                        @Html.TextBox("txtFechaResolucion", "", new { @class = "form-control form-control-sm", placeholder = "dd/mm/yyyy", title = "la fecha a ingresar debe ser en el formato dd/mm/yyyy", maxlength = "10" })
-                    </div>
-                </div>
+                @*<div class="form-group row" style="margin-bottom:0px;">
+            <label for="lblNombre" class="col-md-4 col-form-label text-small">Fecha de Resolución</label>
+            <div class="col-md-4">
+                @Html.TextBox("txtFechaResolucion", "", new { @class = "form-control form-control-sm", placeholder = "dd/mm/yyyy", title = "la fecha a ingresar debe ser en el formato dd/mm/yyyy", maxlength = "10" })
+            </div>
+        </div>*@
                 <div class="form-group row" style="margin-bottom:0px;">
                     <label for="lblNombre" class="col-md-4 col-form-label text-small">Resolución</label>
                     <div class="col-md-8">
@@ -51,39 +51,50 @@
                 <div class="form-group row" style="margin-bottom:0px;">
                     <label for="lblValorAnterior" class="col-md-4 col-form-label text-small">Nro Registro Consultor</label>
                     <div class="col-md-8">
-                        @Html.TextBox("txtValorAnterior", "", new { @class = "form-control form-control-sm" })
+                        @Html.TextBox("txtNroRegConsultor", "", new { @class = "form-control form-control-sm" })
                     </div>
                 </div>
                 <div class="form-group row" style="margin-bottom:0px;">
                     <label for="lblValorAnterior" class="col-md-4 col-form-label text-small">Nro Registro Regente</label>
                     <div class="col-md-8">
-                        @Html.TextBox("txtValorAnterior", "", new { @class = "form-control form-control-sm" })
+                        @Html.TextBox("txtNroRegistroReg", "", new { @class = "form-control form-control-sm" })
                     </div>
                 </div>
                 <div class="form-group row" style="margin-bottom:0px;">
                     <label for="lblValorAnterior" class="col-md-4 col-form-label text-small">Nro Registro Profesional</label>
                     <div class="col-md-8">
-                        @Html.TextBox("txtValorAnterior", "", new { @class = "form-control form-control-sm" })
+                        @Html.TextBox("txtNroRegistroProfesional", "", new { @class = "form-control form-control-sm" })
                     </div>
                 </div>
                 <div class="form-group row" style="margin-bottom:0px;">
                     <label for="lblValorAnterior" class="col-md-4 col-form-label text-small">Nro Licencia</label>
                     <div class="col-md-8">
-                        @Html.TextBox("txtValorAnterior", "", new { @class = "form-control form-control-sm" })
+                        @Html.TextBox("txtNroLicencia", "", new { @class = "form-control form-control-sm" })
                     </div>
                 </div>
                 <div class="form-group row" style="margin-bottom:0px;">
                     <label for="lblValorActual" class="col-md-4 col-form-label text-small">Email</label>
                     <div class="col-md-8">
-                        @Html.TextBox("txtValorActual", "", new { @class = "form-control form-control-sm" })
+                        @Html.TextBox("txtEmail", "", new { @class = "form-control form-control-sm" })
                     </div>
                 </div>
-                <div class="form-group row" style="margin-bottom:0px;">
-                    <label for="lblObservacion" class="col-md-4 col-form-label text-small">Observaciones</label>
-                    <div class="col-md-8">
-                        @Html.TextArea("txtObservacion", "", new { @class = "form-control form-control-sm", @rows = "3" })
+                <div class="form-row">
+                    <div class="form-group col-md-12">
+                        <div class="custom-file" id="customFile">
+                            <input type="file" class="custom-file-input" multiple="multiple" id="txtArchivoAdjuntoEncryp" onchange="_cartaMod.fnSelectFileEncryp(event, this)" aria-describedby="fileHelp">
+                            <label class="custom-file-label" for="txtArchivoAdjuntoEncryp" style="color:#989797">
+                                Seleccionar contrato
+                            </label>
+                        </div>
                     </div>
+
                 </div>
+                @*<div class="form-group row" style="margin-bottom:0px;">
+            <label for="lblObservacion" class="col-md-4 col-form-label text-small">Observaciones</label>
+            <div class="col-md-8">
+                @Html.TextArea("txtObservacion", "", new { @class = "form-control form-control-sm", @rows = "3" })
+            </div>
+        </div>*@
             </form>
         </div>
         <div class="modal-footer">
