--- a/SIGOFCv3/Areas/THabilitante/Views/ManPOA/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManPOA/AddEdit.cshtml
@@ -641,7 +641,7 @@
                                             <table id="grvRegente_implementa" style="width:100%" class="table table-hover table-bordered">
                                                 <thead>
                                                     <tr>
-                                                        <th colspan="11" class="text-sm-left">
+                                                        <th colspan="12" class="text-sm-left">
                                                             <div class="form-inline">
                                                                 <i class="fa mx-1 fa-lg fa-file-o" style="cursor:pointer;" onclick="ManPOA.fnBuscarPersona('REGENTEIMPLEMENTA','0000020');" data-toggle="tooltip" data-placement="top" title="Nuevo"></i>
                                                                 <strong>
@@ -657,10 +657,11 @@
                                                         <th>Nº</th>
                                                         <th>Nombres</th>
                                                         <th>DNI</th>
-                                                        <th>Nro Licencia</th>
                                                         <th>Fecha de otorgamiento</th>
-                                                        <th>Nro resolución directoral</th>
+                                                        <th>Resolución de aprobación</th>
+                                                        <th>Categoria</th>
                                                         <th>Nro CIP</th>
+                                                        <th>Estado</th>
                                                         <th>Contrato</th>
                                                     </tr>
                                                 </thead>
