--- a/SIGOFCv3/Areas/THabilitante/Views/ManPOA/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManPOA/AddEdit.cshtml
@@ -594,7 +594,7 @@
                                                     <label for="lblItemConsultorDNI" class="text-small">DNI</label>
                                                     @Html.EditorFor(m => m.lblItemConsultorDNI, new { htmlAttributes = new { @class = "form-control form-control-sm", @disabled = "disabled" } })
                                                 </div>
-                                                <div class="form-group col-md-4 mb-3">
+                                                @*<div class="form-group col-md-4 mb-3">
                                                     <label for="txtItemNRConsultor" class="text-small">Nro Registro Consultor(Ley 27308)</label>
                                                     @Html.EditorFor(m => m.txtItemNRConsultor, new { htmlAttributes = new { @class = "form-control form-control-sm", maxlength = 100 } })
                                                 </div>
@@ -614,7 +614,37 @@
                                                 <div class="form-group col-md-4 mb-3">
                                                     <label for="txtItemNRNroLicencia" class="text-small">Email</label>
                                                     @Html.EditorFor(m => m.txtItemNREmail, new { htmlAttributes = new { @class = "form-control form-control-sm", @type = "email" } })
+                                                </div>*@
+                                                
+                                                @*<div class="form-group col-md-4 mb-3">
+                                                    <label for="lblItemConsultorCARGO" class="text-small">CARGO</label>
+                                                    @Html.EditorFor(m => m.lblItemConsultorCARGO, new { htmlAttributes = new { @class = "form-control form-control-sm", @disabled = "disabled" } })
+                                                </div>*@
+                                                <div class="form-group col-md-4 mb-3">
+                                                    <label for="lblItemConsultorCIP" class="text-small">CIP</label>
+                                                    @Html.EditorFor(m => m.lblItemConsultorCIP, new { htmlAttributes = new { @class = "form-control form-control-sm", @disabled = "disabled" } })
                                                 </div>
+                                                @*<div class="form-group col-md-4 mb-3">
+                                                    <label for="lblItemConsultorCATEGORIA" class="text-small">CATEGORIA</label>
+                                                    @Html.EditorFor(m => m.lblItemConsultorCATEGORIA, new { htmlAttributes = new { @class = "form-control form-control-sm", @disabled = "disabled" } })
+                                                </div>*@
+                                                <div class="form-group col-md-4 mb-3">
+                                                    <label for="lblItemConsultorESTADO" class="text-small">ESTADO REGENTE</label>
+                                                    @Html.EditorFor(m => m.lblItemConsultorESTADO, new { htmlAttributes = new { @class = "form-control form-control-sm", @disabled = "disabled" } })
+                                                </div>
+                                                <div class="form-group col-md-4 mb-3">
+                                                    <label for="lblItemConsultorLICENCIA" class="text-small">Nro LICENCIA</label>
+                                                    @Html.EditorFor(m => m.lblItemConsultorLICENCIA, new { htmlAttributes = new { @class = "form-control form-control-sm", @disabled = "disabled" } })
+                                                </div>
+                                                <div class="form-group col-md-4 mb-3">
+                                                    <label for="lblItemConsultorOTORGAMIENTO" class="text-small">FECHA OTORGAMIENTO</label>
+                                                    @Html.EditorFor(m => m.lblItemConsultorOTORGAMIENTO, new { htmlAttributes = new { @class = "form-control form-control-sm", @disabled = "disabled" } })
+                                                </div>
+                                                <div class="form-group col-md-4 mb-3">
+                                                    <label for="lblItemConsultorRESOLUCION" class="text-small">RESOLUCIÓN APROBACIÓN</label>
+                                                    @Html.EditorFor(m => m.lblItemConsultorRESOLUCION, new { htmlAttributes = new { @class = "form-control form-control-sm", @disabled = "disabled" } })
+                                                </div>
+
 
                                             </div>
                                             <div class="form-row">
