Actualización de visualización de datos del regente

--- a/SIGOFCv3/Areas/THabilitante/Views/ManPOA/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManPOA/AddEdit.cshtml
@@ -684,8 +684,8 @@
                                                         <th>Nº</th>
                                                         <th>Apellidos y Nombres</th>
                                                         <th>N° Documento</th>
-                                                        <th>Cargo</th>
-                                                        <th>Año</th>
+                                                        @*<th>Cargo</th>*@
+                                                        @*<th>Año</th>*@
                                                         <th>CIP</th>
                                                         <th>Categoria</th>
                                                         <th>Estado Regente</th>
